src/objects/Critical_Issues__c.object
<CustomObject>
    <description>This is the object for Critical Items application to track the weekly critical items for the administrative office.</description>
    <fields>
        <fullName>Action_Required_by_Administrator__c</fullName>
        <description>In this section, the region/staff office/service needs determine what if any action is need by the Administrator.</description>
        <inlineHelpText>In this section, the region/staff office/service needs determine what if any action is need by the Administrator.</inlineHelpText>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready For Signature/Approval</fullName>
                </value>
                <value>
                    <fullName>Action/Decision Required</fullName>
                </value>
                <value>
                    <fullName>Feedback Required</fullName>
                </value>
                <value>
                    <fullName>Info Only/May Require Action</fullName>
                </value>
                <value>
                    <fullName>Info Only/No Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Type_Detail__c</fullName>
        <label>Action Type Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>18F/PIF/X.Gov</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Congressional</fullName>
                </value>
                <value>
                    <fullName>Consolidation/Realignment</fullName>
                </value>
                <value>
                    <fullName>Contracts/Acquisition</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>External Correspondence/Report</fullName>
                </value>
                <value>
                    <fullName>FOIA</fullName>
                </value>
                <value>
                    <fullName>GAO/IG Audit</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Integrated Customer Service</fullName>
                </value>
                <value>
                    <fullName>Internal Correspondence/Report</fullName>
                </value>
                <value>
                    <fullName>Key Properties</fullName>
                </value>
                <value>
                    <fullName>News Story/Press Inquiry</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personnel/HR</fullName>
                </value>
                <value>
                    <fullName>PMA</fullName>
                </value>
                <value>
                    <fullName>Prospectus/Capital Project</fullName>
                </value>
                <value>
                    <fullName>Protests</fullName>
                </value>
                <value>
                    <fullName>Savings Opportunity</fullName>
                </value>
                <value>
                    <fullName>Shared Service</fullName>
                </value>
                <value>
                    <fullName>System/Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Comments2__c</fullName>
        <label>Background/History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admins_To_Do__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Administrator&apos;s To-Do</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Line_2__c</fullName>
        <description>Business Line of Submitting Org. (for FAS and PBS only)</description>
        <inlineHelpText>If Submitting Org is PBS or FAS, please select the Business Line.</inlineHelpText>
        <label>Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Organization__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FAS Commissioner</fullName>
                </value>
                <value>
                    <fullName>Office of Acquisition Management</fullName>
                </value>
                <value>
                    <fullName>Office of Assisted Acquisition Services (AAS)</fullName>
                </value>
                <value>
                    <fullName>Office of Client Solutions</fullName>
                </value>
                <value>
                    <fullName>Office of Customer Accounts and Research (CAR)</fullName>
                </value>
                <value>
                    <fullName>Office of Design &amp; Construction (D&amp;C)</fullName>
                </value>
                <value>
                    <fullName>Office of Facilities Management and Services Programs (FMSP)</fullName>
                </value>
                <value>
                    <fullName>Office of General Supplies and Services (GSS)</fullName>
                </value>
                <value>
                    <fullName>Office of Integrated Acquisition Environment (IAE)</fullName>
                </value>
                <value>
                    <fullName>Office of Integrated Technology Services (ITS)</fullName>
                </value>
                <value>
                    <fullName>Office of Leasing</fullName>
                </value>
                <value>
                    <fullName>Office of Portfolio Management (PT)</fullName>
                </value>
                <value>
                    <fullName>Office of Strategy Management</fullName>
                </value>
                <value>
                    <fullName>Office of TMVCS</fullName>
                </value>
                <value>
                    <fullName>Office of Utilization and Disposal (PTZ)</fullName>
                </value>
                <value>
                    <fullName>PBS Commissioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Affected Org text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_long__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Item_Status__c</fullName>
        <description>In this section, identify if this is a new item for this week, a recurring item that continues to require the Acting Administrator&apos;s attention, or a recurring item that has updates for the Acting Administrator.</description>
        <inlineHelpText>Current status of the critical issue.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Delegate Reviewed</fullName>
                </value>
                <value>
                    <fullName>RC Reviewed</fullName>
                </value>
                <value>
                    <fullName>Business Line Reviewed</fullName>
                </value>
                <value>
                    <fullName>RA Reviewed</fullName>
                </value>
                <value>
                    <fullName>Commissioner Reviewed</fullName>
                </value>
                <value>
                    <fullName>Commissioner Approved</fullName>
                </value>
                <value>
                    <fullName>Staff Office Reviewed</fullName>
                </value>
                <value>
                    <fullName>Front Office Reviewed</fullName>
                </value>
                <value>
                    <fullName>Chief of Staff Reviewed</fullName>
                </value>
                <value>
                    <fullName>Deputy Administrator Reviewed</fullName>
                </value>
                <value>
                    <fullName>Administrator Reviewed</fullName>
                </value>
                <value>
                    <fullName>Administrator Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Updated__c</fullName>
        <label>Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <description>If this section, please provide a deadline (MM/DD/YYYY) for when you would like a response from the Administrator (if any).</description>
        <inlineHelpText>If this section, please provide a deadline (MM/DD/YYYY) for when you would like a response from the Administrator (if any).</inlineHelpText>
        <label>Action Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_address_of_Staff_POC__c</fullName>
        <label>Email of Critical Item POC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Government_Confidential__c</fullName>
        <defaultValue>&quot;Confidential&quot;</defaultValue>
        <label>Government Confidential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Intended_Audience__c</fullName>
        <label>Highest Intended Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regional Commissioner</fullName>
                </value>
                <value>
                    <fullName>Regional Administrator</fullName>
                </value>
                <value>
                    <fullName>Business Line Executive</fullName>
                </value>
                <value>
                    <fullName>HSSO</fullName>
                </value>
                <value>
                    <fullName>Administrator&apos;s Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IQ_Number__c</fullName>
        <description>Required if &quot;Signature Required&quot; is selected in Action Type field</description>
        <label>IQ Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Requested_Week_Of__c</fullName>
        <label>Meeting Requested Week Of</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Name of the Organization or Region submitting this request</description>
        <inlineHelpText>Name of the Organization or Region submitting this request</inlineHelpText>
        <label>Submitting Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Office</fullName>
                </value>
                <value>
                    <fullName>Audit Group</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>Exec Sec</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
                <value>
                    <fullName>OCIA</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>OCR</fullName>
                </value>
                <value>
                    <fullName>OCSIT</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OGP</fullName>
                </value>
                <value>
                    <fullName>OHRM</fullName>
                </value>
                <value>
                    <fullName>OMA</fullName>
                </value>
                <value>
                    <fullName>OSBU</fullName>
                </value>
                <value>
                    <fullName>PBS</fullName>
                </value>
                <value>
                    <fullName>TTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number_of_Staff_POC__c</fullName>
        <label>Phone of Critical Item POC</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Public_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Administrator&apos;s Office  can select this checkbox in order to share this record with CXO/Delegates from all Orgs and Regions</inlineHelpText>
        <label>Public Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Action__c</fullName>
        <description>When an action is required by the Administrator, provide proposed next steps and timeline. Otherwise, provide your next steps (if any) to address this item.</description>
        <inlineHelpText>When an action is required by the Administrator, provide proposed next steps and timeline. Otherwise, provide your next steps (if any) to address this item.</inlineHelpText>
        <label>Recommended Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <label>Other Affected Org(s)/Region(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Organization__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Office</fullName>
                </value>
                <value>
                    <fullName>Audit Group</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>Exec Sec</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
                <value>
                    <fullName>OCIA</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>OCR</fullName>
                </value>
                <value>
                    <fullName>OCSIT</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OGP</fullName>
                </value>
                <value>
                    <fullName>OHRM</fullName>
                </value>
                <value>
                    <fullName>OMA</fullName>
                </value>
                <value>
                    <fullName>OSBU</fullName>
                </value>
                <value>
                    <fullName>PBS</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>TTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <inlineHelpText>Updated details on current status.</inlineHelpText>
        <label>Status Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_by_Delegate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted by Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the Point of Contact for this critical item.</inlineHelpText>
        <label>Critical Item POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Critical_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Critical Item</label>
    <listViews>
        <fullName>Action_Type_Action_Decision_Req</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Highest_Intended_Audience__c</columns>
        <columns>User__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action_Required_by_Administrator__c</field>
            <operation>equals</operation>
            <value>Action/Decision Required</value>
        </filters>
        <label>Action Type: Action/Decision Req</label>
    </listViews>
    <listViews>
        <fullName>Action_Type_Feedback_Required</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Highest_Intended_Audience__c</columns>
        <columns>User__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action_Required_by_Administrator__c</field>
            <operation>equals</operation>
            <value>Feedback Required</value>
        </filters>
        <label>Action Type: Feedback Required</label>
    </listViews>
    <listViews>
        <fullName>Action_Type_Info_Only_No_Action</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Highest_Intended_Audience__c</columns>
        <columns>User__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action_Required_by_Administrator__c</field>
            <operation>equals</operation>
            <value>Info Only/No Action Needed</value>
        </filters>
        <label>Action Type: Info Only-No Action</label>
    </listViews>
    <listViews>
        <fullName>Action_Type_Info_Only_Require_Action</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Highest_Intended_Audience__c</columns>
        <columns>User__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action_Required_by_Administrator__c</field>
            <operation>equals</operation>
            <value>Info Only/May Require Action</value>
        </filters>
        <label>Action Type: Info Only-Require Action</label>
    </listViews>
    <listViews>
        <fullName>Action_Type_Ready_for_Signature</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Highest_Intended_Audience__c</columns>
        <columns>User__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action_Required_by_Administrator__c</field>
            <operation>equals</operation>
            <value>Ready For Signature/Approval</value>
        </filters>
        <label>Action Type: Ready for Signature</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Highest_Intended_Audience__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Meeting_Requested_Yes</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Highest_Intended_Audience__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meeting_Requested__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Meeting Requested: Yes</label>
    </listViews>
    <listViews>
        <fullName>My_Items</fullName>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Items</label>
    </listViews>
    <listViews>
        <fullName>Org_Audit_Group</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>Audit Group</value>
        </filters>
        <filters>
            <field>Related_Organization__c</field>
            <operation>includes</operation>
            <value>Audit Group</value>
        </filters>
        <label>Org: Audit Group</label>
    </listViews>
    <listViews>
        <fullName>Org_CFO</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>CFO</value>
        </filters>
        <filters>
            <field>Related_Organization__c</field>
            <operation>includes</operation>
            <value>CFO</value>
        </filters>
        <label>Org: CFO</label>
    </listViews>
    <listViews>
        <fullName>Org_CIO</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>CIO</value>
        </filters>
        <filters>
            <field>Related_Organization__c</field>
            <operation>includes</operation>
            <value>CIO</value>
        </filters>
        <label>Org: CIO</label>
    </listViews>
    <listViews>
        <fullName>Org_CPO</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>CPO</value>
        </filters>
        <filters>
            <field>Related_Organization__c</field>
            <operation>includes</operation>
            <value>CPO</value>
        </filters>
        <label>Org: CPO</label>
    </listViews>
    <listViews>
        <fullName>Org_Exec_Sec</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>Exec Sec</value>
        </filters>
        <filters>
            <field>Related_Organization__c</field>
            <operation>includes</operation>
            <value>Exec Sec</value>
        </filters>
        <label>Org: Exec Sec</label>
    </listViews>
    <listViews>
        <fullName>Org_FAS</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>FAS</value>
        </filters>
        <filters>
            <field>Related_Organization__c</field>
            <operation>includes</operation>
            <value>FAS</value>
        </filters>
        <label>Org: FAS</label>
    </listViews>
    <listViews>
        <fullName>Org_OAS</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Related_Organization__c</columns>
        <columns>Critical_Item_Status__c</columns>
        <columns>Action_Required_by_Administrator__c</columns>
        <columns>IQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>equals</operation>
            <value>OAS</value>
        </filters>
        <filters>
            <field>Related_Organization__c</field>
            <operation>includes</operation>
            <value>OAS</value>
        </filters>
        <label>Org: OAS</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Critical Items</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Chatter__c</fullName>
        <label>Chatter</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>POC__c</fullName>
        <label>POC</label>
    </sharingReasons>
    <validationRules>
        <fullName>Action_Deadline_future_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISNEW(),  Deadline__c  &lt; TODAY()), AND(ISCHANGED(Deadline__c ), Deadline__c  &lt; DATEVALUE(CreatedDate)))</errorConditionFormula>
        <errorMessage>Action Deadline must be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Line_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL( Organization__c,&apos;FAS&apos;),ISPICKVAL( Organization__c,&apos;PBS&apos;)), ISPICKVAL( Business_Line_2__c ,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Business_Line_2__c</errorDisplayField>
        <errorMessage>Business Line is required for the selected Submitting Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Critical_Item_Action_Type</fullName>
        <active>true</active>
        <description>Validation to ensure the action deadline and recommended action fields are keyed in when Action Type is not FYI</description>
        <errorConditionFormula>OR(AND(OR(ISPICKVAL( Action_Required_by_Administrator__c , &apos;Action/Decision Required&apos;),ISPICKVAL( Action_Required_by_Administrator__c , &apos;Ready For Signature/Approval&apos;), ISPICKVAL( Action_Required_by_Administrator__c , &apos;Info Only/May Require Action&apos;), ISPICKVAL( Action_Required_by_Administrator__c , &apos;Feedback Required&apos;)), ISBLANK( Deadline__c)), 
AND(OR(ISPICKVAL( Action_Required_by_Administrator__c , &apos;Action/Decision Required&apos;),ISPICKVAL( Action_Required_by_Administrator__c , &apos;Ready For Signature/Approval&apos;), ISPICKVAL( Action_Required_by_Administrator__c , &apos;Info Only/May Require Action&apos;), ISPICKVAL( Action_Required_by_Administrator__c , &apos;Feedback Required&apos;)),
ISBLANK(Recommended_Action__c)))</errorConditionFormula>
        <errorMessage>Please ensure that Action Deadline and Recommended Action fields are entered for this Action Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IQ_Number_Required</fullName>
        <active>true</active>
        <description>Requires the user to enter the IQ number if &quot;Signature Required&quot; is selected from the Action Type Picklist</description>
        <errorConditionFormula>AND(ISPICKVAL( Action_Required_by_Administrator__c , &quot;Ready For Signature/Approval&quot;) ,
 ISBLANK(IQ_Number__c ))</errorConditionFormula>
        <errorMessage>If it is Ready For Signature/Approval, please enter the corresponding IQ Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_Requested_Week_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Meeting_Requested__c , ISBLANK( Meeting_Requested_Week_Of__c ))</errorConditionFormula>
        <errorMessage>Meeting Requested Week Of is Required</errorMessage>
    </validationRules>
</CustomObject>